--- a/blog.html
+++ b/blog.html
@@ -204,7 +204,7 @@
                             <h4 class="mb-4">Contact Us</h4>
                             <div class="d-flex flex-column align-items-start">
                                 <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Panruti, Cuddalore </p>
-                                <p><i class="fa fa-phone-alt text-primary me-2"></i> (+91) 89730 85571</p>
+                                <p><i class="fa fa-phone-alt text-primary me-2"></i> 89730 85571</p>
                                 <p><i class="fas fa-envelope text-primary me-2"></i> vigneshcateringservices.com</p>
                                 <p><i class="fa fa-clock text-primary me-2"></i> 26/7 Hours Service</p>
                             </div>
